--- a/index.html
+++ b/index.html
@@ -46,7 +46,14 @@
                                 class="my-projects-bracket">]</span>
                         </span>
                     </li>
-
+                    <li class="my-projects-iten">
+                        <span class="my-projects-text">
+                            <a href="https://natali-didenko.github.io/My-resume/"
+                                class="my-projects-link">https://natali-didenko.github.io/My-resume//</a>
+                            .......
+                            <span class="my-projects-bracket">[</span> HTML5, CSS3 <span class="my-projects-bracket">]</span>
+                        </span>
+                    </li>
                 </ul>
             </div>
             <!-- My work experionce-->
