--- a/index.html
+++ b/index.html
@@ -56,23 +56,23 @@
                     </li>
                 </ul>
             </div>
-            <!-- My work experionce-->
-            <div class="my-work-experionce">
-                <h3 class="main-content-title"> Work Experionce </h3>
+            <!-- My work experience-->
+            <div class="my-work-experience">
+                <h3 class="main-content-title"> Work Experience </h3>
                 <!--Company 3 -->
-                <h4 class="my-work-experionce-position"> Educator <span class="my-work-experionce-company">Nursery -
+                <h4 class="my-work-experience-position"> Educator <span class="my-work-experionce-company">Nursery -
                         garden</span> </h4>
-                <p class="my-work-experionce-period"> September 2019 - February 2020</p>
+                <p class="my-work-experience-period"> September 2019 - February 2020</p>
                 <!--Company 2 -->
-                <h4 class="my-work-experionce-position"> Teacher organizer <span
-                        class="my-work-experionce-company">School</span> </h4>
-                <p class="my-work-experionce-period"> September 2016 - December 2017 </p>
+                <h4 class="my-work-experience-position"> Teacher organizer <span
+                        class="my-work-experience-company">School</span> </h4>
+                <p class="my-work-experience-period"> September 2016 - December 2017 </p>
                 <!--Company 1 -->
-                <h4 class="my-work-experionce-position"> Email operator
-                    <span class="my-work-experionce-company">Department of the State Penitentiary Service in the Kherson
+                <h4 class="my-work-experience-position"> Email operator
+                    <span class="my-work-experience-company">Department of the State Penitentiary Service in the Kherson
                         Region</span>
                 </h4>
-                <p class="my-work-experionce-period"> August 2009 - August 2016</p>
+                <p class="my-work-experience-period"> August 2009 - August 2016</p>
             </div>
             <!--Languages-->
             <div class="my-lenguages">
