--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <ul class="my-projects-list">
                     <li class="my-projects-iten">
                         <span class="my-projects-text">
-                            <a href="https://hellenglish.goit.global/"
+                            <a href="https://natali-didenko.github.io/goit-markup-hw-08/"
                                 class="my-projects-link">https://natali-didenko.github.io/goit-markup-hw-08/</a>
                             ........
                             <span class="https://natali-didenko.github.io/goit-markup-hw-08/">[</span> HTML5, CSS3 <span
