--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
             <div class="my-lenguages">
                 <h3 class="main-content-title">Languages</h3>
                 <ul class="my-languages-duties">
-                    <li class="my-langusges-duty">Ukrainian - native</li>
-                    <li class="my-langusges-duty">Russian - native</li>
+                    <li class="my-langusges-duty">Ukrainian - Native</li>
+                    <li class="my-langusges-duty">Russian - Intermediate</li>
                     <li class="my-langusges-duty">English - Pre - Intermediate</li>
                 </ul>
             </div>
