--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <ul class="my-languages-duties">
                     <li class="my-langusges-duty">Ukrainian - Native</li>
                     <li class="my-langusges-duty">Russian - Intermediate</li>
-                    <li class="my-langusges-duty">English - Pre - Intermediate</li>
+                    <li class="my-langusges-duty">English - Pre-Intermediate</li>
                 </ul>
             </div>
             <!-- My Education-->
@@ -123,7 +123,7 @@
                 </div>
                 <div>
                     <span class="contacts-sektion-title">Linkedin:</span>
-                    <a class="contacts-sektion-link" href="mailto:garan240312@gmail.com">garan240312@gmail.com</a>
+                    <a class="contacts-sektion-link" href="www.linkedin.com/in/natalia-didenko-357502209">www.linkedin.com/in/natalia-didenko-357502209</a>
                 </div>
                 <div>
                     <span class="contacts-sektion-title">Github:</span>
