--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <ul class="my-languages-duties">
                     <li class="my-langusges-duty">Ukrainian - Native</li>
                     <li class="my-langusges-duty">Russian - Intermediate</li>
-                    <li class="my-langusges-duty">English - Pre-Intermediate</li>
+                    <li class="my-langusges-duty">English - Intermediate</li>
                 </ul>
             </div>
             <!-- My Education-->
